--- a/index.html
+++ b/index.html
@@ -423,6 +423,30 @@
 
     </section>
 
+    <section>
+        <div class="container">
+            <div class="gallery">
+                <div class="card">
+                    <img src="https://source.unsplash.com/4hMET7vYTAQ/" alt="">
+                    <div class="info">
+                    <h4 class="title">Machu Picchu, Peru</h4>
+                </div>
+            </div>
+            <div class="card">
+                    <img src="https://source.unsplash.com/_8EFj6ISA08/" alt="">
+                    <div class="info">
+                    <h4 class="title">The Great Wall of China</h4>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://source.unsplash.com/qay3lNDSHzc/" alt="">
+                <div class="info">
+                  <h4 class="title">Sundarbans, Bangladesh</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
 
 <!--     <script>
         //sticky element selector에 sticky 속성을 사용하고자하는 엘리먼트의 selector 설정
