--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
+<!--구글아이콘-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+<!--구글아이콘 화살표-->
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+
+<!--bootstrap Icon 부트스트랩 아이콘 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <!--스와이퍼슬라이더-->
@@ -208,14 +215,6 @@
 
 </header>
 
-<!-- <div class="sticky">
-    <ul>
-        <li><a href="#">스티키1</a></li>
-        <li><a href="#">스티키2</a></li>
-        <li><a href="#">스티키3</a></li>
-    </ul>
-</div> -->
-
     <section class="welcom-box">
         <div class="welcom-container">
             <div class="welcom-text1">Welcom to The Shilla  Hotel Seoul</div>
@@ -342,7 +341,7 @@
                         <img src="./img/slid-spa.png" alt="슬라이드이미지6">
                     </div>
                     <div class="slid-text">
-                        <div class="slid-text1">Shilla Spa/div>
+                        <div class="slid-text1">Shilla Spa</div>
                         <div class="slid-horizon"></div>
                         <div class="slid-text2">몸과 마음이 편안해지는 재충전의 시간<br>
                         2023.01.01~2023.03.31</div>
@@ -427,27 +426,97 @@
         <div class="container">
             <div class="gallery">
                 <div class="card">
-                    <img src="https://source.unsplash.com/4hMET7vYTAQ/" alt="">
+                    <img src="./img/full_img01.png" alt="">
                     <div class="info">
-                    <h4 class="title">Machu Picchu, Peru</h4>
-                </div>
+                        <h4 class="title">MY SPECIAL WEDDING</h4>
+                        <div class="text">인생의 가장 빛나는 순간을 신라호텔과 함께하세요.</div>
+                        <div class="btn"><a href="#">VIEW MORE</a></div>
+                    </div>
             </div>
             <div class="card">
-                    <img src="https://source.unsplash.com/_8EFj6ISA08/" alt="">
+                    <img src="./img/full_img03.png" alt="">
                     <div class="info">
-                    <h4 class="title">The Great Wall of China</h4>
-                </div>
+                        <h4 class="title">SHILLA HOTEL SOUEL STORY</h4>
+                        <div class="text">1973년 시작된 스토리를 담았습니다.</div>
+                        <div class="btn"><a href="#">VIEW MORE</a></div>
+                    </div>
             </div>
             <div class="card">
-                <img src="https://source.unsplash.com/qay3lNDSHzc/" alt="">
+                <img src="./img/full_img02.png" alt="">
                 <div class="info">
-                  <h4 class="title">Sundarbans, Bangladesh</h4>
+                    <h4 class="title">CONCIERGE SERVICE</h4>
+                    <div class="text">세심하고 친절한 서비스로 기분 좋은 순간을 선물합니다.</div>
+                    <div class="btn"><a href="#">VIEW MORE</a></div>
                 </div>
               </div>
             </div>
           </div>
     </section>
 
+    <section class="map-area">
+        <div class="horizon"></div>
+        <div class="map-title">
+            Map
+        </div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.8862306777046!2d127.00544551558842!3d37.557744132388756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2ed7f0d9e75%3A0x49ec999d2ee31371!2z7ISc7Jq47Iug65287Zi47YWU!5e0!3m2!1sko!2skr!4v1675646780358!5m2!1sko!2skr" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="gogleMap"></iframe>
+            <div class="map-patten">
+                <img src="./img/map-background.png" alt="">
+            </div>
+        </div>
+        <div></div>
+        <div class="text-box">
+            <div class="text1">문의하기</div>
+            <div class="text2">대한민국 서울특별시 중구 동호로 249 <br>
+                Tel. 02-2233-3131 <br>
+                Fax. 02-2230-3769 <br>
+                shilla.reserve@samsung.com
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="company">
+                <a href="#"><img src="./img/footer-company1.png" alt="The Shilla"></a>
+                <a href="#"><img src="./img/footer-company2.png" alt="Shilla Monogram"></a>
+                <a href="#"><img src="./img/footer-company3.png" alt="Shilla Stay"></a>
+            </div>
+        <div class="footer-main">
+            <div class="logo"><img src="./img/footer-shillaLogo.png" alt="서울신라호텔"></div>
+            <div class="text-area"> 
+                <div class="text-top">
+                    <div><a href="#">고객센터</a></div>
+                    <div><a href="#">웹사이트이용약관</a></div>
+                    <div><a href="#">이메일무단수집금지</a></div>
+                    <div><a href="#">영상정보처리기기운영방침</a></div>
+                    <div><a href="#">개인정보처리방침</a></div>
+                    <div><a href="#">호텔정책</a></div>
+                </div>
+                <div class="text-bottom">
+                    신라호텔 서울 : 서울특별시 중구 동호로 249 (우:04650)<br>
+                    대표이사 이부진 | T.02-2233-3131 | F.02-2230-3769 | E-MAIL shilla.reserve@samsung.com <br>
+                    사업자등록번호 : 203-81-43363| 통신판매신고번호 : 중구 00272호
+                </div>
+            </div>
+        </div>
+        <div class="more"><a href="https://pf.kakao.com/_uItFK" target="_blank">더 많은 정보를 만나보세요</a>
+        <a href="https://pf.kakao.com/_uItFK" target="_blank"><span class="material-symbols-outlined">
+            arrow_forward
+            </span></a></div>
+        <div class="horizon"></div>
+        <div class="footer-sub">
+            <div class="copy">Copyright (c) HOTEL SHILLA CO.,LTD. All Rights Reserved.</div> 
+            <div class="sns">
+                <a href="https://www.facebook.com/theshillahotels" target="_blank"><span class="bi bi-facebook"></span></a>
+                <a href="#"><span class="bi bi-instagram"></span></a>
+                <a href="https://www.youtube.com/channel/UCG1q-aJtEd7MKuTgk0DnGQw?view_as=subscriber" target="_blank"><span class="bi bi-youtube"></span></a>
+                <a href="#"><span class="bi bi-map-fill"></span></a>
+            </div>
+        </div>
+        </div>
+        
+    </footer> 
 <!--     <script>
         //sticky element selector에 sticky 속성을 사용하고자하는 엘리먼트의 selector 설정
 let parent = document.querySelector('.overlay').parentElement;
@@ -475,7 +544,7 @@ while (parent) {
 
     <!--매직스크롤-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <!--쥐삭-->
+    <!--gsap-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 
 
