--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./hambuger.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="shortcut icon" href="./img/shilla.ico">
 
     <!--구글 폰트-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +71,7 @@
                         </ul>
                     </li>
                     <li class="main-menu">
-                        <a href="#" class="main-menu-text1">Accommodation</a>
+                        <a href="./room/room.html" class="main-menu-text1">Accommodation</a>
                         <ul class="sub-menu-container">
                             <li class="sub-menu-inner"><a href="#">Standard</a></li>
                             <li><a href="#">Executive</a></li>
@@ -89,7 +90,7 @@
                         </ul>
                     </li>
                     <li class="main-menu">
-                        <a href="#" class="main-menu-text1">Life Style</a>
+                        <a href="./life-style/lifeStyle.html" class="main-menu-text1">Life Style</a>
                         <ul class="sub-menu-container">
                             <li class="sub-menu-inner"><a href="#">Outdoor Pool</a></li>
                             <li><a href="#">spa</a></li>
@@ -99,7 +100,7 @@
                         </ul>
                     </li>
                     <li class="main-menu">
-                        <a href="#" class="main-menu-text1">Meeting & Event</a>
+                        <a href="./wedding/wd.html" class="main-menu-text1">Meeting & Event</a>
                         <ul class="sub-menu-container">
                             <li class="sub-menu-inner"><a href="#">Wedding</a></li>
                             <li><a href="#">Meetings</a></li>
@@ -130,7 +131,7 @@
                     </div>
                 </li>
                 <li class="item">
-                    <a href="#" class="item-name">Accommodation</a>
+                    <a href="./room/room.html" class="item-name">Accommodation</a>
                     <div class="content-menu">
                         <ul class="inner">
                             <li><a href="#">Standard</a></li>
@@ -152,7 +153,7 @@
                     </div>
                 </li>
                 <li class="item">
-                    <a href="#" class="item-name">Life Style</a>
+                    <a href="./life-style/lifeStyle.html" class="item-name">Life Style</a>
                     <div class="content-menu">
                         <ul class="inner">
                             <li><a href="#">Outdoor Pool</a></li>
@@ -191,17 +192,12 @@
         <video class="main-video" autoplay loop muted>
             <source src="./slila.mp4">
         </video>
-
-        <!--글씨 등장 영역-->
-<!--         <div class="text-anmation">
-            <div class="show1">Urban</div>
-            <div class="show2-box"><span class="show2">Lifestyle Hotel</span></div>
-        </div> -->
+        <!--텍스트 애니메이션-->
         <div class="text_anmation">
-    <div class="show1">Urban</div> 
-<div> 
-  <span class="show2">Lifestyle Hotel</span>
-</div>
+            <div class="show1">Urban</div> 
+            <div> 
+                <span class="show2">Lifestyle Hotel</span>
+            </div>
         </div>
 
         <!--날자폼-->
@@ -386,6 +382,28 @@
                         2023.01.01~2023.03.31</div>
                     </div>
                 </div>
+                <div class="swiper-slide">
+                    <div class="slid-img">
+                        <img src="./img/slide-dinner.png" alt="슬라이드이미지7">
+                    </div>
+                    <div class="slid-text">
+                        <div class="slid-text1">Rewards Free Lounge & Bar</div>
+                        <div class="slid-horizon"></div>
+                        <div class="slid-text2">라운지 바에서 맥주와 메뉴를 즐기며 여유로운 시간<br>
+                        2023.01.18~2023.03.31</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slid-img">
+                        <img src="./img/slide-delight.png" alt="슬라이드이미지8">
+                    </div>
+                    <div class="slid-text">
+                        <div class="slid-text1">Rewards Standard Delight</div>
+                        <div class="slid-horizon"></div>
+                        <div class="slid-text2">셰프 추천 주류와 요리의 페어링과 함게 깊어가는 밤을 만끽해보세요.<br>
+                        2023.01.01~2023.03.31</div>
+                    </div>
+                </div>
 
                 <div class="swiper-pagination"></div>
     
@@ -397,14 +415,6 @@
         <div class="main-slid-horizon"></div>
 
     </section>
-
-<!--     <section class="membership">
-        <div class="membership-text">
-            <div class="membership-text1">Shilla S Membership</div>
-            <div class="membership-text2">다양한 경험과 혜택을 제공하는 Shilla S 멤버십!</div>
-            <div class="membership-text3">멤버십 혜택을 통해 객실 및 레스토랑 등을 합리적으로 이용하실 수 있습니다.</div>
-        </div>
-    </section> -->
 
     <section class="event scroll-spy">
         <div class="event-box">
@@ -568,7 +578,7 @@
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="./hambuger-btn.js"></script>
+    <script src="./index.js"></script>
 
     <!--date js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
